add_library(IR STATIC
        Argument.cpp
        BasicBlock.cpp
        Constant.cpp
        Function.cpp
        GlobalVariable.cpp
        Instruction.cpp
        Instructions.cpp
        IRBuilder.cpp
        IRCompiler.cpp
        IRContext.cpp
        IRPrinter.cpp
        Module.cpp
        Type.cpp
        Use.cpp
        User.cpp
        Value.cpp)